# AC-Ambience-Player

./: .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  acnl_player.cbp  audioPlayer.h  cmake_install.cmake  fileManager.cpp  fileManager.h  main.cpp
acnl_player_autogen/MXUWEOXILK/: moc_trayIcon.cpp
src/: audioPlayer.cpp  audioPlayer.h  fileManager.cpp  fileManager.h  main.cpp
